# apt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  README.md  apt.supp
CMake/: Documentation.cmake  FindBerkeley.cmake  FindLFS.cmake  FindLmdb.cmake  FindOpenSSH.cmake  FindSQLITE3.cmake  FindTkrzw.cmake  Translations.cmake  config.h.in
apt-pkg/: CMakeLists.txt  acquire-item.cc  acquire-item.h  acquire-worker.cc  acquire.cc  acquire.h  algorithms.cc  aptconfiguration.cc  cachefilter-patterns.cc  cachefilter.h  cacheiterators.h  cacheset.cc  cacheset.h  cdrom.cc  depcache.cc  depcache.h  dirstream.cc  edsp.cc  indexcopy.cc  indexfile.cc  init.cc  install-progress.cc  install-progress.h  metaindex.cc  metaindex.h  orderlist.cc  packagemanager.cc  pkgcache.cc  pkgcache.h  pkgcachegen.cc  pkgcachegen.h  pkgsystem.cc  policy.cc  policy.h  solver3.cc  solver3.h  sourcelist.cc  sourcelist.h  tagfile-keys.list  tagfile.cc  (+3 more)
apt-private/: acqprogress.cc  private-cmndline.cc  private-cmndline.h  private-download.cc  private-download.h  private-history.cc  private-install.cc  private-list.cc  private-main.cc  private-main.h  private-moo.cc  private-output.cc  private-output.h  private-search.cc  private-show.cc  private-source.cc  private-sources.cc  private-sources.h  private-update.cc  private-upgrade.cc
cmdline/: CMakeLists.txt  apt-cache.cc  apt-cdrom.cc  apt-config.cc  apt-debconf-communicate  apt-dump-solver.cc  apt-extracttemplates.cc  apt-get.cc  apt-helper.cc  apt.cc  (+4 more)
completions/: CMakeLists.txt
completions/bash/: apt  apt-cache  apt-config  apt-get  apt-mark
(+266 files in other folders)
